# pop-agent

./: .gitignore  README.md  bootstrap.py  claude-code-agent-analysis-report.md  claude-code-runtime-agent-analysis-report.md  package.json  pyproject.toml
openspec/changes/archive/2026-05-13-add-popsci-multi-agent-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-13-add-popsci-multi-agent-cli/specs/cli-and-api-surface/: spec.md
openspec/changes/archive/2026-05-14-add-cli-tui-frontend/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-14-fix-openai-compatible-llm-stability/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-16-add-web-frontend-v1/: design.md  proposal.md  tasks.md
openspec/specs/cli-and-api-surface/: spec.md
openspec/specs/cli-tui-frontend/: spec.md
openspec/specs/multimodal-artifacts/: spec.md
openspec/specs/popsci-generation/: spec.md
openspec/specs/user-cognitive-memory/: spec.md
openspec/specs/web-frontend/: spec.md
pop_agent/: __init__.py  agents.py  api.py  cli.py  config.py  daemon.py  dependencies.py  install.py  llm.py  memory.py  models.py  orchestrator.py  slash_commands.py  storage.py  user_config.py
pop_agent/tui/: __init__.py  app.py
tests/: test_api.py  test_bootstrap.py  test_daemon.py  test_dependencies.py  test_generation.py  test_install.py  test_llm.py  test_memory.py  test_node_wrappers.py  test_slash_commands.py  test_tui.py  test_user_config.py  test_web_frontend.py
web/scripts/: build.mjs  dev.mjs
web/src/: app.js  index.html  styles.css
(+7 files in other folders)
